--- a/client/src/main/resources/views/game.fxml
+++ b/client/src/main/resources/views/game.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns:fx="http://javafx.com/fxml" fx:id="mainPanel" xmlns="http://javafx.com/javafx"
-      fx:controller="fr.ensicaen.oware.client.controllers.MainController" prefHeight="400.0" prefWidth="600.0"
+      fx:controller="fr.ensicaen.oware.client.controllers.GameController" prefHeight="490" prefWidth="490"
       styleClass="main-panel" stylesheets="@../styles/main.css">
-    <ImageView fitHeight="490" fitWidth="490" layoutX="0" layoutY="0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fitHeight="490" fitWidth="490" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/background.jpg"/>
     </ImageView>
 </Pane>
