--- a/client/src/main/resources/styles/menu.css
+++ b/client/src/main/resources/styles/menu.css
@@ -33,3 +33,8 @@
 .close-button:hover, .close-button:focused {
     -fx-background-color: #cc3d07;
 }
+
+.errorMessage {
+    -fx-fill: #ff0000;
+    -fx-text-alignment: center;
+}
