--- a/client/src/main/resources/styles/menu.css
+++ b/client/src/main/resources/styles/menu.css
@@ -7,6 +7,7 @@
 }
 
 .button {
+    -fx-font-family: 'Open Sans', sans-serif;
     -fx-background-color: #3498db;
     -fx-text-fill: white;
     -fx-font-size: 1.3em;
@@ -18,6 +19,7 @@
 }
 
 .copyright {
+    -fx-font-family: 'Open Sans', sans-serif;
     -fx-fill: #dddddd;
     -fx-font-size: 13px;
 }
@@ -35,6 +37,7 @@
 }
 
 .errorMessage {
+    -fx-font-family: 'Open Sans', sans-serif;
     -fx-fill: #ff0000;
     -fx-text-alignment: center;
 }
