--- a/client/src/main/resources/views/game.fxml
+++ b/client/src/main/resources/views/game.fxml
@@ -8,7 +8,8 @@
       fx:controller="fr.ensicaen.oware.client.controllers.GameController" prefHeight="490" prefWidth="490"
       styleClass="main-panel" stylesheets="@../styles/main.css">
 
-    <Text text="Plateau de jeu simplifié :" layoutX="25" layoutY="30"/>
+    <Text text="Simplified gameboard :" layoutX="25" layoutY="30"/>
+    <Text fx:id="myTurnText" text="It's your turn!" layoutX="25" layoutY="120" visible="false"/>
 
     <GridPane alignment="center" hgap="10" vgap="10" fx:id="opponentHolesPane" layoutY="30">
         <padding>
