--- a/client/src/main/resources/views/menu.fxml
+++ b/client/src/main/resources/views/menu.fxml
@@ -7,26 +7,28 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
-<Pane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" fx:id="mainPanel"
-      fx:controller="fr.ensicaen.oware.client.controllers.MenuController" prefHeight="450" prefWidth="700"
-      stylesheets="@../styles/menu.css">
+<Pane xmlns:fx="http://javafx.com/fxml/1" fx:id="mainPanel" prefHeight="450" prefWidth="700"
+      stylesheets="@../styles/menu.css" xmlns="http://javafx.com/javafx/8.0.172-ea"
+      fx:controller="fr.ensicaen.oware.client.controllers.MenuController">
     <ImageView fitHeight="450" fitWidth="700" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/menu.jpg"/>
     </ImageView>
 
-    <TextField fx:id="hostnameTextField" styleClass="input" text="localhost" promptText="Server hostname"
-               layoutX="30" layoutY="210" prefWidth="230" prefHeight="30"/>
-    <TextField fx:id="portTextField" styleClass="input" text="59898" promptText="Server port"
-               layoutX="30" layoutY="250" prefWidth="230" prefHeight="30"/>
-    <Button onAction="#onConnectButtonClick" mnemonicParsing="false" styleClass="button" text="Start the game!"
-            layoutX="30" layoutY="310" prefWidth="230" prefHeight="30"/>
+    <TextField fx:id="hostnameTextField" layoutX="30" layoutY="210" prefHeight="30" prefWidth="230"
+               promptText="Server hostname" styleClass="input" text="localhost"/>
+    <TextField fx:id="portTextField" layoutX="30" layoutY="250" prefHeight="30" prefWidth="230" promptText="Server port"
+               styleClass="input" text="59898"/>
+    <TextField fx:id="playerNameTextField" layoutX="30.0" layoutY="290" prefHeight="30" prefWidth="230"
+               promptText="Username" styleClass="input"/>
+    <Button layoutX="30.0" layoutY="352.0" mnemonicParsing="false" onAction="#onConnectButtonClick" prefHeight="30"
+            prefWidth="230" styleClass="button" text="Start the game!"/>
 
-    <HBox alignment="CENTER" layoutX="30" layoutY="345" prefWidth="230" prefHeight="40">
+    <HBox alignment="CENTER" layoutX="30.0" layoutY="389.0" prefHeight="40" prefWidth="230">
         <Text fx:id="errorMessage" styleClass="errorMessage" visible="false" wrappingWidth="230"/>
     </HBox>
-    <Text fx:id="copyright" text="Version ${version}&#13;Maxime Malgorn, Pierre Poulain" styleClass="copyright"
-          textAlignment="RIGHT" layoutY="420" layoutX="495"/>
+    <Text fx:id="copyright" layoutX="495" layoutY="420" styleClass="copyright"
+          text="Version ${version}&#13;Maxime Malgorn, Pierre Poulain" textAlignment="RIGHT"/>
 
-    <Button onAction="#onCloseButtonClick" mnemonicParsing="false" styleClass="close-button"
-            layoutX="665" layoutY="10" text="X"/>
+    <Button layoutX="665" layoutY="10" mnemonicParsing="false" onAction="#onCloseButtonClick" styleClass="close-button"
+            text="X"/>
 </Pane>
